Trying to deal with the difference issue that's causing color contrast warnings to come up from the w3 checker

--- a/css/modern.css
+++ b/css/modern.css
@@ -118,7 +118,7 @@ h3,h4 {
 }
 
 #menu {
-  background-color: rgb(78, 99, 96);
+  background-color: rgb(63, 77, 75);
 }
 
 #menu ul {
